[gd_scene load_steps=13 format=4 uid="uid://mxnqty7o012t"]

[ext_resource type="PackedScene" uid="uid://biyd6x403gvny" path="res://models/core_models/platform-falling.glb" id="1_1qe41"]
[ext_resource type="Script" path="res://objects/platform_falling.gd" id="2_wd5kn"]
[ext_resource type="Texture2D" uid="uid://0odt7cvj574e" path="res://models/core_models/Textures/colormap.png" id="3_ppmqg"]
[ext_resource type="PackedScene" uid="uid://dpo3dr26b06w3" path="res://objects/spike_block_wide.tscn" id="4_tjnoj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t551e"]
size = Vector3(2, 0.1, 2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_4mmvt"]
data = PackedVector3Array(-0.9, 0, -0.72, -1, 0.2, -0.8, -1, 0.2, 0.8, -1, 0.2, 0.8, -0.9, 0, 0.72, -0.9, 0, -0.72, -0.95, 0.5, -0.95, -0.95, 0.2, -0.95, -0.8, 0.2, -1, -0.8, 0.2, -1, -0.8, 0.5, -1, -0.95, 0.5, -0.95, -1, 0.2, -0.8, -0.95, 0.2, -0.95, -0.95, 0.5, -0.95, -0.95, 0.5, -0.95, -1, 0.5, -0.8, -1, 0.2, -0.8, -1, 0.2, 0.8, -1, 0.2, -0.8, -1, 0.5, -0.8, -1, 0.5, -0.8, -1, 0.5, 0.8, -1, 0.2, 0.8, 0.8, 0.5, -1, 0.8, 0.2, -1, 0.95, 0.2, -0.95, 0.95, 0.2, -0.95, 0.95, 0.5, -0.95, 0.8, 0.5, -1, -0.8, 0.5, -1, -0.8, 0.2, -1, 0.8, 0.2, -1, 0.8, 0.2, -1, 0.8, 0.5, -1, -0.8, 0.5, -1, 1, 0.5, -0.8, 0.95, 0.5, -0.95, 0.95, 0.2, -0.95, 0.95, 0.2, -0.95, 1, 0.2, -0.8, 1, 0.5, -0.8, -0.8, 0.5, 1, -0.8, 0.2, 1, -0.95, 0.2, 0.95, -0.95, 0.2, 0.95, -0.95, 0.5, 0.95, -0.8, 0.5, 1, -0.95, 0.2, 0.95, -1, 0.2, 0.8, -1, 0.5, 0.8, -1, 0.5, 0.8, -0.95, 0.5, 0.95, -0.95, 0.2, 0.95, -0.8, 0.2, -1, -0.72, 0, -0.9, 0.72, 0, -0.9, 0.72, 0, -0.9, 0.8, 0.2, -1, -0.8, 0.2, -1, 1, 0.2, 0.8, 1, 0.2, -0.8, 0.9, 0, -0.72, 0.9, 0, -0.72, 0.9, 0, 0.72, 1, 0.2, 0.8, -0.95, 0.2, -0.95, -0.855, 0, -0.855, -0.72, 0, -0.9, -0.72, 0, -0.9, -0.8, 0.2, -1, -0.95, 0.2, -0.95, 1, 0.2, 0.8, 0.9, 0, 0.72, 0.855, 0, 0.855, 0.855, 0, 0.855, 0.95, 0.2, 0.95, 1, 0.2, 0.8, -0.855, 0, 0.855, -0.9, 0, 0.72, -1, 0.2, 0.8, -1, 0.2, 0.8, -0.95, 0.2, 0.95, -0.855, 0, 0.855, 0.8, 0.2, 1, 0.72, 0, 0.9, -0.72, 0, 0.9, -0.72, 0, 0.9, -0.8, 0.2, 1, 0.8, 0.2, 1, 0.95, 0.5, 0.95, 1, 0.5, 0.8, 1, 0.2, 0.8, 1, 0.2, 0.8, 0.95, 0.2, 0.95, 0.95, 0.5, 0.95, 1, 0.5, 0.8, 1, 0.5, -0.8, 1, 0.2, -0.8, 1, 0.2, -0.8, 1, 0.2, 0.8, 1, 0.5, 0.8, 1, 0.2, -0.8, 0.95, 0.2, -0.95, 0.855, 0, -0.855, 0.855, 0, -0.855, 0.9, 0, -0.72, 1, 0.2, -0.8, -0.855, 0, -0.855, -0.95, 0.2, -0.95, -1, 0.2, -0.8, -1, 0.2, -0.8, -0.9, 0, -0.72, -0.855, 0, -0.855, 0.8, 0.2, -1, 0.72, 0, -0.9, 0.855, 0, -0.855, 0.855, 0, -0.855, 0.95, 0.2, -0.95, 0.8, 0.2, -1, 0.95, 0.2, 0.95, 0.855, 0, 0.855, 0.72, 0, 0.9, 0.72, 0, 0.9, 0.8, 0.2, 1, 0.95, 0.2, 0.95, 0.855, 0, 0.855, 0.9, 0, 0.72, 0.9, 0, -0.72, 0.9, 0, -0.72, 0.855, 0, -0.855, 0.855, 0, 0.855, 0.855, 0, -0.855, 0.72, 0, 0.9, 0.855, 0, 0.855, 0.855, 0, -0.855, 0.72, 0, -0.9, 0.72, 0, 0.9, 0.72, 0, -0.9, -0.72, 0, 0.9, 0.72, 0, 0.9, 0.72, 0, -0.9, -0.72, 0, -0.9, -0.72, 0, 0.9, -0.72, 0, -0.9, -0.855, 0, -0.855, -0.72, 0, 0.9, -0.855, 0, -0.855, -0.855, 0, 0.855, -0.72, 0, 0.9, -0.855, 0, -0.855, -0.9, 0, -0.72, -0.855, 0, 0.855, -0.9, 0, -0.72, -0.9, 0, 0.72, -0.855, 0, 0.855, -0.8, 0.2, 1, -0.72, 0, 0.9, -0.855, 0, 0.855, -0.855, 0, 0.855, -0.95, 0.2, 0.95, -0.8, 0.2, 1, 0.95, 0.5, 0.95, 0.95, 0.2, 0.95, 0.8, 0.2, 1, 0.8, 0.2, 1, 0.8, 0.5, 1, 0.95, 0.5, 0.95, 0.8, 0.5, 1, 0.8, 0.2, 1, -0.8, 0.2, 1, -0.8, 0.2, 1, -0.8, 0.5, 1, 0.8, 0.5, 1, -0.95, 0.5, 0.95, -1, 0.5, 0.8, -1, 0.5, -0.8, -0.95, 0.5, 0.95, -1, 0.5, -0.8, -0.95, 0.5, -0.95, -0.8, 0.5, 1, -0.95, 0.5, 0.95, -0.95, 0.5, -0.95, -0.8, 0.5, 0.7675, -0.8, 0.5, 1, -0.95, 0.5, -0.95, -0.8, 0.5, -0.7675, -0.8, 0.5, 0.7675, -0.95, 0.5, -0.95, -0.8, 0.5, 1, -0.8, 0.5, 0.7675, -0.7919, 0.5, 0.7919, -0.8, 0.5, 1, -0.7919, 0.5, 0.7919, -0.7675, 0.5, 0.8, -0.8, 0.5, 1, -0.7675, 0.5, 0.8, 0.7675, 0.5, 0.8, -0.8, 0.5, -0.7675, -0.95, 0.5, -0.95, -0.8, 0.5, -1, 0.8, 0.5, 1, -0.8, 0.5, 1, 0.7675, 0.5, 0.8, -0.7919, 0.5, -0.7919, -0.8, 0.5, -0.7675, -0.8, 0.5, -1, -0.7675, 0.5, -0.8, -0.7919, 0.5, -0.7919, -0.8, 0.5, -1, 0.7675, 0.5, -0.8, -0.7675, 0.5, -0.8, -0.8, 0.5, -1, 0.8, 0.5, 1, 0.7675, 0.5, 0.8, 0.7919, 0.5, 0.7919, 0.7675, 0.5, -0.8, -0.8, 0.5, -1, 0.8, 0.5, -1, 0.7919, 0.5, -0.7919, 0.7675, 0.5, -0.8, 0.8, 0.5, -1, 0.8, 0.5, -0.7675, 0.7919, 0.5, -0.7919, 0.8, 0.5, -1, 0.8, 0.5, 0.7675, 0.8, 0.5, -0.7675, 0.8, 0.5, -1, 0.8, 0.5, 1, 0.7919, 0.5, 0.7919, 0.8, 0.5, 0.7675, 0.8, 0.5, -1, 0.95, 0.5, -0.95, 0.8, 0.5, 0.7675, 0.8, 0.5, 1, 0.8, 0.5, 0.7675, 0.95, 0.5, -0.95, 0.95, 0.5, 0.95, 0.8, 0.5, 1, 0.95, 0.5, -0.95, 0.95, 0.5, 0.95, 0.95, 0.5, -0.95, 1, 0.5, -0.8, 1, 0.5, -0.8, 1, 0.5, 0.8, 0.95, 0.5, 0.95, 0.8, 0.5, -0.7675, 0.8, 0.5, 0.7675, 0.7919, 0.5, 0.7919, 0.7919, 0.5, 0.7919, 0.7919, 0.5, -0.7919, 0.8, 0.5, -0.7675, 0.7919, 0.5, 0.7919, 0.7675, 0.5, 0.8, 0.7919, 0.5, -0.7919, 0.7675, 0.5, 0.8, 0.7675, 0.5, -0.8, 0.7919, 0.5, -0.7919, 0.7675, 0.5, 0.8, 0.6, 0.5, -0.6, 0.7675, 0.5, -0.8, 0.6, 0.5, -0.6, -0.7675, 0.5, -0.8, 0.7675, 0.5, -0.8, 0.7675, 0.5, 0.8, 0.6, 0.5, 0.6, 0.6, 0.5, -0.6, 0.6, 0.5, -0.6, -0.6, 0.5, -0.6, -0.7675, 0.5, -0.8, 0.6, 0.5, 0.6, 0.7675, 0.5, 0.8, -0.7675, 0.5, 0.8, -0.6, 0.5, -0.6, -0.6, 0.5, 0.6, -0.7675, 0.5, -0.8, -0.7675, 0.5, 0.8, -0.6, 0.5, 0.6, 0.6, 0.5, 0.6, -0.7675, 0.5, 0.8, -0.7675, 0.5, -0.8, -0.6, 0.5, 0.6, -0.7675, 0.5, 0.8, -0.7919, 0.5, -0.7919, -0.7675, 0.5, -0.8, -0.7675, 0.5, 0.8, -0.7919, 0.5, 0.7919, -0.7919, 0.5, -0.7919, -0.7919, 0.5, 0.7919, -0.8, 0.5, -0.7675, -0.7919, 0.5, -0.7919, -0.7919, 0.5, 0.7919, -0.8, 0.5, 0.7675, -0.8, 0.5, -0.7675, 0.6, 0.5, -0.6, 0.6, 0.5, 0.6, -0.6, 0.5, 0.6, -0.6, 0.5, 0.6, -0.6, 0.5, -0.6, 0.6, 0.5, -0.6, 0.7, 0.4, 0.7, 0.7, 0.2, 0.7, 1.1, 0.2, 0.7, 1.1, 0.2, 0.7, 1.1, 0.4, 0.7, 0.7, 0.4, 0.7, 0.7, 0.4, 0.7, 1.1, 0.4, 0.7, 1.1, 0.4, 0.8162, 1.1, 0.4, 0.8162, 1.0291, 0.4, 1.0291, 0.7, 0.4, 0.7, 1.0291, 0.4, 1.0291, 0.8162, 0.4, 1.1, 0.7, 0.4, 0.7, 0.8162, 0.4, 1.1, 0.7, 0.4, 1.1, 0.7, 0.4, 0.7, 1.1, 0.2, 0.8162, 1.1, 0.2, 0.7, 0.7, 0.2, 0.7, 0.7, 0.2, 0.7, 1.0291, 0.2, 1.0291, 1.1, 0.2, 0.8162, 0.7, 0.2, 0.7, 0.8162, 0.2, 1.1, 1.0291, 0.2, 1.0291, 0.7, 0.2, 0.7, 0.7, 0.2, 1.1, 0.8162, 0.2, 1.1, 1.0291, 0.4, 1.0291, 1.0291, 0.2, 1.0291, 0.8162, 0.2, 1.1, 0.8162, 0.2, 1.1, 0.8162, 0.4, 1.1, 1.0291, 0.4, 1.0291, 1.0291, 0.4, 1.0291, 1.1, 0.4, 0.8162, 1.1, 0.2, 0.8162, 1.1, 0.2, 0.8162, 1.0291, 0.2, 1.0291, 1.0291, 0.4, 1.0291, 1.1, 0.4, 0.8162, 1.1, 0.4, 0.7, 1.1, 0.2, 0.7, 1.1, 0.2, 0.7, 1.1, 0.2, 0.8162, 1.1, 0.4, 0.8162, 0.8162, 0.4, 1.1, 0.8162, 0.2, 1.1, 0.7, 0.2, 1.1, 0.7, 0.2, 1.1, 0.7, 0.4, 1.1, 0.8162, 0.4, 1.1, 0.7, 0.2, 1.1, 0.7, 0.2, 0.7, 0.7, 0.4, 0.7, 0.7, 0.4, 0.7, 0.7, 0.4, 1.1, 0.7, 0.2, 1.1, 1.1, 0.4, -0.7, 1.1, 0.2, -0.7, 0.7, 0.2, -0.7, 0.7, 0.2, -0.7, 0.7, 0.4, -0.7, 1.1, 0.4, -0.7, 1.1, 0.4, -0.8162, 1.1, 0.4, -0.7, 0.7, 0.4, -0.7, 0.7, 0.4, -0.7, 1.0291, 0.4, -1.0291, 1.1, 0.4, -0.8162, 0.7, 0.4, -0.7, 0.8162, 0.4, -1.1, 1.0291, 0.4, -1.0291, 0.7, 0.4, -0.7, 0.7, 0.4, -1.1, 0.8162, 0.4, -1.1, 0.7, 0.2, -0.7, 1.1, 0.2, -0.7, 1.1, 0.2, -0.8162, 1.1, 0.2, -0.8162, 1.0291, 0.2, -1.0291, 0.7, 0.2, -0.7, 1.0291, 0.2, -1.0291, 0.8162, 0.2, -1.1, 0.7, 0.2, -0.7, 0.8162, 0.2, -1.1, 0.7, 0.2, -1.1, 0.7, 0.2, -0.7, 0.7, 0.4, -1.1, 0.7, 0.2, -1.1, 0.8162, 0.2, -1.1, 0.8162, 0.2, -1.1, 0.8162, 0.4, -1.1, 0.7, 0.4, -1.1, 0.7, 0.2, -0.7, 0.7, 0.2, -1.1, 0.7, 0.4, -1.1, 0.7, 0.4, -1.1, 0.7, 0.4, -0.7, 0.7, 0.2, -0.7, 1.1, 0.4, -0.7, 1.1, 0.4, -0.8162, 1.1, 0.2, -0.8162, 1.1, 0.2, -0.8162, 1.1, 0.2, -0.7, 1.1, 0.4, -0.7, 1.1, 0.4, -0.8162, 1.0291, 0.4, -1.0291, 1.0291, 0.2, -1.0291, 1.0291, 0.2, -1.0291, 1.1, 0.2, -0.8162, 1.1, 0.4, -0.8162, 0.8162, 0.4, -1.1, 0.8162, 0.2, -1.1, 1.0291, 0.2, -1.0291, 1.0291, 0.2, -1.0291, 1.0291, 0.4, -1.0291, 0.8162, 0.4, -1.1, -1.1, 0.2, -0.7, -1.1, 0.2, -0.8162, -1.1, 0.4, -0.8162, -1.1, 0.4, -0.8162, -1.1, 0.4, -0.7, -1.1, 0.2, -0.7, -0.8162, 0.4, -1.1, -0.8162, 0.2, -1.1, -0.7, 0.2, -1.1, -0.7, 0.2, -1.1, -0.7, 0.4, -1.1, -0.8162, 0.4, -1.1, -0.8162, 0.4, -1.1, -0.7, 0.4, -1.1, -0.7, 0.4, -0.7, -0.7, 0.4, -0.7, -1.1, 0.4, -0.7, -0.8162, 0.4, -1.1, -1.1, 0.4, -0.7, -1.0291, 0.4, -1.0291, -0.8162, 0.4, -1.1, -1.1, 0.4, -0.7, -1.1, 0.4, -0.8162, -1.0291, 0.4, -1.0291, -0.7, 0.4, -0.7, -0.7, 0.4, -1.1, -0.7, 0.2, -1.1, -0.7, 0.2, -1.1, -0.7, 0.2, -0.7, -0.7, 0.4, -0.7, -0.7, 0.4, -0.7, -0.7, 0.2, -0.7, -1.1, 0.2, -0.7, -1.1, 0.2, -0.7, -1.1, 0.4, -0.7, -0.7, 0.4, -0.7, -1.0291, 0.4, -1.0291, -1.0291, 0.2, -1.0291, -0.8162, 0.2, -1.1, -0.8162, 0.2, -1.1, -0.8162, 0.4, -1.1, -1.0291, 0.4, -1.0291, -1.1, 0.2, -0.8162, -1.0291, 0.2, -1.0291, -1.0291, 0.4, -1.0291, -1.0291, 0.4, -1.0291, -1.1, 0.4, -0.8162, -1.1, 0.2, -0.8162, -0.7, 0.2, -0.7, -0.7, 0.2, -1.1, -0.8162, 0.2, -1.1, -0.8162, 0.2, -1.1, -1.1, 0.2, -0.7, -0.7, 0.2, -0.7, -0.8162, 0.2, -1.1, -1.0291, 0.2, -1.0291, -1.1, 0.2, -0.7, -1.0291, 0.2, -1.0291, -1.1, 0.2, -0.8162, -1.1, 0.2, -0.7, -0.8162, 0.2, 1.1, -0.7, 0.2, 1.1, -0.7, 0.2, 0.7, -0.7, 0.2, 0.7, -1.1, 0.2, 0.7, -0.8162, 0.2, 1.1, -1.1, 0.2, 0.7, -1.0291, 0.2, 1.0291, -0.8162, 0.2, 1.1, -1.1, 0.2, 0.7, -1.1, 0.2, 0.8162, -1.0291, 0.2, 1.0291, -1.1, 0.4, 0.7, -0.7, 0.4, 0.7, -0.7, 0.4, 1.1, -0.7, 0.4, 1.1, -0.8162, 0.4, 1.1, -1.1, 0.4, 0.7, -0.8162, 0.4, 1.1, -1.0291, 0.4, 1.0291, -1.1, 0.4, 0.7, -1.0291, 0.4, 1.0291, -1.1, 0.4, 0.8162, -1.1, 0.4, 0.7, -1.0291, 0.2, 1.0291, -1.1, 0.2, 0.8162, -1.1, 0.4, 0.8162, -1.1, 0.4, 0.8162, -1.0291, 0.4, 1.0291, -1.0291, 0.2, 1.0291, -1.1, 0.2, 0.8162, -1.1, 0.2, 0.7, -1.1, 0.4, 0.7, -1.1, 0.4, 0.7, -1.1, 0.4, 0.8162, -1.1, 0.2, 0.8162, -0.7, 0.4, 1.1, -0.7, 0.4, 0.7, -0.7, 0.2, 0.7, -0.7, 0.2, 0.7, -0.7, 0.2, 1.1, -0.7, 0.4, 1.1, -0.7, 0.4, 1.1, -0.7, 0.2, 1.1, -0.8162, 0.2, 1.1, -0.8162, 0.2, 1.1, -0.8162, 0.4, 1.1, -0.7, 0.4, 1.1, -0.8162, 0.4, 1.1, -0.8162, 0.2, 1.1, -1.0291, 0.2, 1.0291, -1.0291, 0.2, 1.0291, -1.0291, 0.4, 1.0291, -0.8162, 0.4, 1.1, -1.1, 0.4, 0.7, -1.1, 0.2, 0.7, -0.7, 0.2, 0.7, -0.7, 0.2, 0.7, -0.7, 0.4, 0.7, -1.1, 0.4, 0.7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8q84p"]
resource_name = "colormap"
cull_mode = 2
albedo_texture = ExtResource("3_ppmqg")

[sub_resource type="ArrayMesh" id="ArrayMesh_subup"]
_surfaces = [{
"aabb": AABB(-1.1, 0, -1.1, 2.2, 0.5, 2.2),
"format": 34896613377,
"index_count": 540,
"index_data": PackedByteArray("AgAAAAEAAQADAAIABgAEAAUABQAHAAYAAAAEAAYABgAIAAAAAQAAAAgACAAJAAEADAAKAAsACwANAAwABwAFAAoACgAMAAcADgANAAsACwAPAA4AEgAQABEAEQATABIAEQABAAkACQATABEABQAUABUAFQAKAAUAFwAPABYAFgAYABcABAAZABQAFAAFAAQAFwAYABoAGgAbABcAHAADAAEAAQARABwAHwAdAB4AHgAQAB8AIQAgABcAFwAbACEAIAAOAA8ADwAXACAADwALACIAIgAWAA8AGQAEAAAAAAACABkACgAVACIAIgALAAoAGwAaAB0AHQAfABsAGgAYABYAFgAiABoAIgAdABoAIgAVAB0AFQAeAB0AFQAUAB4AFAAZAB4AGQAcAB4AGQACABwAAgADABwAEAAeABwAHAARABAAIQAbAB8AHwAjACEAIwAfABAAEAASACMAEwAJAAgAEwAIAAYAEgATAAYAJAASAAYAJQAkAAYAEgAkACYAEgAmACcAEgAnACgAJQAGAAcAIwASACgAKQAlAAcAKgApAAcAKwAqAAcAIwAoACwAKwAHAAwALQArAAwALgAtAAwALwAuAAwAIwAsAC8ADAANAC8AIwAvAA0AIQAjAA0AIQANAA4ADgAgACEALgAvACwALAAtAC4ALAAoAC0AKAArAC0AKAAwACsAMAAqACsAKAAxADAAMAAyACoAMQAoACcAMgAzACoAJwAzADEAJwAqADMAJwApACoAJwAmACkAJgAlACkAJgAkACUAMAAxADMAMwAyADAANgA0ADUANQA3ADYANgA3ADgAOAA5ADYAOQA6ADYAOgA7ADYAPAA1ADQANAA9ADwANAA+AD0ANAA/AD4AOQA9AD4APgA6ADkAOQA4ADwAPAA9ADkAOAA3ADUANQA8ADgAOgA+AD8APwA7ADoAPwA0ADYANgA7AD8AQgBAAEEAQQBDAEIARABCAEMAQwBFAEQAQwBGAEUAQwBHAEYAQQBAAEgASABJAEEASQBKAEEASgBLAEEARwBLAEoASgBGAEcAQQBLAEcARwBDAEEAQgBEAEgASABAAEIARABFAEkASQBIAEQARgBKAEkASQBFAEYATgBMAE0ATQBPAE4AUgBQAFEAUQBTAFIAUgBTAFQAVABPAFIATwBVAFIATwBNAFUAVABTAFEAUQBWAFQAVABWAE4ATgBPAFQAVQBXAFAAUABSAFUATABXAFUAVQBNAEwAVgBRAFAAUABOAFYAUABXAE4AVwBMAE4AWgBYAFkAWQBbAFoAWwBcAFoAWwBdAFwAYABeAF8AXwBhAGAAYQBiAGAAYgBjAGAAXABdAGMAYwBiAFwAXQBbAGAAYABjAF0AXwBeAFkAWQBYAF8AXwBYAFoAWgBhAF8AYQBaAFwAXABiAGEAYABbAFkAWQBeAGAA"),
"lods": [0.659953, PackedByteArray("AgAUAAgACAAJAAIAHgACAAkACAAUAA0ADQAUACIAGQAUAAIAAgAeABwAGgAeABYAIgAWAA0AIQANABYAFgAeACEAFgAiABoAIgAeABoAIgAUAB4AFAAZAB4AGQAcAB4AGQACABwAHgAJACEAJAAJAAgAIQAJACQAJQAkAAgAIQAkAC4ALgAlAAgAIQAuAA0ALgAIAA0AJAAyAC4AMgAlAC4AJAAlADIANgA0ADUANQA3ADYANgA3ADkAOQA7ADYAPAA1ADQANAA/ADwAOQA3ADUANQA8ADkAOQA8AD8APwA7ADkAPwA0ADYANgA7AD8AQgBAAEEAQQBDAEIARABCAEMAQwBHAEQAQQBAAEkASQBLAEEARwBLAEkASQBEAEcAQgBEAEkASQBAAEIAQQBLAEcARwBDAEEATgBQAFUAVQBPAE4AVQBQAFEAUQBTAFUAVQBTAFQAVABPAFUAVABTAFEAUQBWAFQAVABWAE4ATgBPAFQAVgBRAFAAUABOAFYAXABYAFkAWQBbAFwAYABeAF8AXwBiAGAAXABbAGAAYABiAFwAXABiAF8AXwBYAFwAXwBeAFkAWQBYAF8AYABbAFkAWQBeAGAA")],
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 100,
"vertex_data": PackedByteArray("ogtmZugiAACiC2ZmFt0AAEUXAAA3LAAARRcAAMfTAAB0EWZmdBEAAOgiZmaiCwAAdBH//3QRAADoIv//ogsAAKIL///oIgAAogv//xbdAAAW3WZmogsAAIruZmZ0EQAAFt3//6ILAACK7v//dBEAAFz0///oIgAAXPRmZugiAADoImZmXPQAAHQRZmaK7gAA6CL//1z0AAB0Ef//iu4AADcsAABFFwAAx9MAAEUXAAC56AAANywAAFz0ZmYW3QAAuegAAMfTAACCHAAAghwAAHzjAAB84wAAiu5mZoruAACCHAAAfOMAAMfTAAC56AAANywAALnoAAAW3WZmXPQAAFz0//8W3QAAiu7//4ruAAB84wAAghwAABbd//9c9AAA6CL//0/ZAADoIv//ryYAANoj//8k3AAAryb//xbdAABP2f//Ft0AANoj///aIwAAryb//+giAABP2f//6CIAACTc//8k3AAAJNz//9ojAAAW3f//ryYAABbd//9P2QAA0MX//y46AADQxf//0MUAAC46//8uOgAALjr//9DFAABz0WZmc9EAAP//ZmZz0QAAc9HMzHPRAAD//8zMc9EAAP//zMz53gAAvffMzL33AAD53szM//8AAHPRzMz//wAA//9mZvneAAC992ZmvfcAAPneZmb//wAAc9FmZv//AAD//2Zmiy4AAHPRZmaLLgAA///MzIsuAABz0czMiy4AAP//zMwFIQAAvffMzEEIAAD53szMAAAAAHPRzMwAAAAA//9mZgUhAAC992ZmQQgAAPneZmYAAAAAc9FmZgAAAAAAAGZmBSEAAAAAzMwFIQAAAABmZosuAAAAAMzMiy4AAAUhZmYAAAAAiy5mZgAAAAAFIczMAAAAAIsuzMwAAAAAiy7MzIsuAABBCMzMQQgAAIsuZmaLLgAAQQhmZkEIAACLLmZm//8AAIsuZmZz0QAABSFmZv//AAAAAGZmc9EAAEEIZma99wAAAABmZvneAACLLszMc9EAAIsuzMz//wAAAADMzHPRAAAFIczM//8AAEEIzMy99wAAAADMzPneAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6gl6g"]
resource_name = "platform-falling_platform-falling"
_surfaces = [{
"aabb": AABB(-1.1, 0, -1.1, 2.2, 0.5, 2.2),
"attribute_data": PackedByteArray("/zcepf83HqX/N5i5/zeYuf83HqX/Nx6l/zdlhv83ZYb/Nx6l/zdlhv83HqX/N2WG/zcepf83ZYb/Nx6l/zdlhv83HqX/Nx6l/zdlhv83ZYb/Nx6l/zcepf83ZYb/N2WG/zdlhv83HqX/N2WG/zcepf83HqX/Nx6l/zdlhv83ZYb/Nx6l/zdlhv83HqX/N2WG/zeYuf83mLn/Nx6l/zcepf83HqX/N5i5/zcepf83mLn/N5i5/zeYuf83HqX/Nx6l/zeYuf83mLn/Nx6l/zcepf83mLn/Nx6l/zeYuf83HqX/N5i5/zeYuf83HqX/Nx6l/zdlhv83HqX/N2WG/zcepf83ZYb/Nx6l/zdlhv83HqX/Nx6l/zeYuf83HqX/N5i5/zcepf83HqX/N5i5/zeYuf83mLn/N5i5/zcepf83HqX/N5i5/zeYuf83HqX/Nx6l/zeYuf83mLn/N5i5/zeYuf83mLn/N5i5/zeYuf83mLn/N5i5/zeYuf83mLn/N5i5/zeYuf83mLn/Nx6l/zcepf83HqX/Nx6l/zdlhv83ZYb/Nx6l/zcepf83ZYb/N2WG/zdlhv83ZYb/N2WG/zdlhv83ZYb/N2WG/zdlhv83ZYb/N2WG/zdlhv83ZYb/N2WG/zdlhv83ZYb/N2WG/zdlhv83ZYb/N2WG/zdlhv83ZYb/N2WG/zdlhv83ZYb/N2WG/xeY+f8XmPn/F5j5/xeY+f8XmPn/F5j5/xeY+f8XmPn/F5j5/xeY+f8XmPn/F5j5/xeY+f8XmPn/F5j5/xeY+f8X/9//F//f/xf/3/8X/9//V5j5/1eY+f9XZcb/V2XG/1dlxv9XZcb/V2XG/1dlxv9XZcb/V2XG/1eY+f9XmPn/V5j5/1eY+f9XmPn/V5j5/1eY+f9XmPn/V2XG/1dlxv9XZcb/V5j5/1dlxv9XmPn/V2XG/1eY+f9XZcb/V5j5/1eY+f9XmPn/V2XG/1dlxv9XmPn/V2XG/1eY+f9XZcb/V5j5/1eY+f9XZcb/V2XG/1dlxv9XZcb/V2XG/1dlxv9XZcb/V2XG/1eY+f9XmPn/V5j5/1eY+f9XmPn/V5j5/1eY+f9XmPn/V2XG/1dlxv9XmPn/V2XG/1eY+f9XZcb/V2XG/1eY+f9XZcb/V5j5/1dlxv9XmPn/V2XG/1eY+f9XmPn/V5j5/1dlxv9XZcb/V5j5/1dlxv9XmPn/V2XG/1eY+f9XmPn/V2XG/1dlxv9XZcb/V2XG/1dlxv9XZcb/V2XG/1dlxv9XZcb/V5j5/1dlxv9XmPn/V5j5/1eY+f9XZcb/V2XG/1eY+f9XmPn/V2XG/1dlxv9XmPn/V2XG/1eY+f9XZcb/V5j5/1eY+f9XmPn/V5j5/1eY+f9XmPn/V5j5/1eY+f9XmPn/V5j5/1eY+f9XmPn/V2XG/1dlxv9XZcb/V2XG/1dlxv9XZcb/V5j5/1dlxv9XmPn/V2XG/1eY+f9XZcb/V5j5/1dlxv9XZcb/V5j5/1dlxv9XmPn/V5j5/1eY+f9XZcb/V2XG/1eY+f9XmPn/V2XG/1dlxv9XmPn/V5j5/1dlxv9XZcb/N5i5/zdlhv83ZYb/N2WG/zdlhv83ZYb/N5i5/zeYuf83mLn/N5i5/zeYuf83mLn/N5i5/zeYuf83mLn/N2WG/zdlhv83ZYb/N5i5/zeYuf9XZcb/V5j5/1eY+f9XZcb/V2XG/1eY+f9XmPn/V5j5/1dlxv9XmPn/V5j5"),
"format": 34896613399,
"index_count": 540,
"index_data": PackedByteArray("AgAAAAEAAQADAAIABgAEAAUABQAHAAYACgAIAAkACQALAAoADgAMAA0ADQAPAA4AEgAQABEAEQATABIAFgAUABUAFQAXABYAGgAYABkAGQAbABoAHgAcAB0AHQAfAB4AIgAgACEAIQAjACIAJgAkACUAJQAnACYAKgAoACkAKQArACoALgAsAC0ALQAvAC4AMgAwADEAMQAzADIANgA0ADUANQA3ADYAOgA4ADkAOQA7ADoAPgA8AD0APQA/AD4AQgBAAEEAQQBDAEIARgBEAEUARQBHAEYASgBIAEkASQBLAEoATgBMAE0ATQBPAE4AUgBQAFEAUQBTAFIAVgBUAFUAVQBXAFYAVwBYAFYAVwBZAFgAWQBaAFgAWQBbAFoAWwBcAFoAXABdAFoAXABeAF0AXgBfAF0AYgBgAGEAYQBjAGIAZgBkAGUAZQBnAGYAagBoAGkAaQBrAGoAbgBsAG0AbgBtAG8AcABuAG8AcQBwAG8AcgBxAG8AcABxAHMAcABzAHQAcAB0AHUAcgBvAHYAdwBwAHUAeAByAHYAeQB4AHYAegB5AHYAdwB1AHsAegB2AHwAfQB6AHwAfgB9AHwAfwB+AHwAdwB7AH8AfACAAH8AdwB/AIAAgQB3AIAAgQCAAIIAggCDAIEAhgCEAIUAhQCHAIYAhQCIAIcAiACJAIcAiACKAIkAigCLAIkAiACMAIoAigCNAIsAjACIAI4AjQCPAIsAjgCPAIwAjgCLAI8AjgCQAIsAjgCRAJAAkQCSAJAAkQCTAJIAlgCUAJUAlQCXAJYAmgCYAJkAmQCbAJoAngCcAJ0AnQCfAJ4AnwCgAJ4AoAChAJ4ApACiAKMAowClAKQAowCmAKUAowCnAKYAqgCoAKkAqQCrAKoArgCsAK0ArQCvAK4AsgCwALEAsQCzALIAtgC0ALUAtQC3ALYAugC4ALkAuQC7ALoAvgC8AL0AvQC/AL4AwgDAAMEAwQDDAMIAwQDEAMMAwQDFAMQAyADGAMcAxwDJAMgAyQDKAMgAygDLAMgAzgDMAM0AzQDPAM4A0gDQANEA0QDTANIA1gDUANUA1QDXANYA2gDYANkA2QDbANoA3gDcAN0A3QDfAN4A4gDgAOEA4QDjAOIA5gDkAOUA5QDnAOYA6gDoAOkA6QDrAOoA6wDsAOoA6wDtAOwA8ADuAO8A7wDxAPAA9ADyAPMA8wD1APQA+AD2APcA9wD5APgA/AD6APsA+wD9APwAAAH+AP8A/wABAQAB/wACAQEBAgEDAQEBBgEEAQUBBQEHAQYBBwEIAQYBBwEJAQgBDAEKAQsBCwENAQwBDQEOAQwBDgEPAQwBEgEQAREBEQETARIBFgEUARUBFQEXARYBGgEYARkBGQEbARoBHgEcAR0BHQEfAR4BIgEgASEBIQEjASIBJgEkASUBJQEnASYB"),
"lods": [0.659953, PackedByteArray("KAEuASkBKQEPACgBNAEoAQ8AKgEkACwBLAEkADoBLAAkAAIAAgA5ADYAMQA5ACkAOgEwAS0BOAEtATABLwE1ATcBVQA7ATIBOwFaADIBOwFbAFoAWwAxAVoAMQEzAVoAMQFeADMBNgErATkBcQBsAG0AgQBsAHEAcgBxAG0AgQBxAH4AfgByAG0AgQB+AIAAfgBtAIAAkwCNAIYAjQCSAIYAkwCSAI0AmgCYAJkAmQCbAJoAngCcAJ8AnwChAJ4ApACiAKMAowCnAKQAPAGwALEAsQA9ATwBPAE9AT4BPgG3ADwBugC4ALkAuQC7ALoAvgC8AL0AvQC/AL4AwgDAAMEAwQDFAMIAyADGAMkAyQDLAMgAPwHMAEEBQQFAAT8B1gBAAUEBQQHXANYA0gDQANEA0QDTANIAQgFDAUQBRAHjAEIBRAFDAeUA5QDnAEQB7ADoAOkA6QDrAOwA8ADuAO8A7wDxAPAA9ADyAPMA8wD1APQAAAH+AP8A/wABAQABCAEEAQUBBQEHAQgBDAEKAQsBCwEOAQwBRQEUARUBFQETAUUBRQETAR4BHgEcAUYBGgEYARkBGQEbARoBJgEkASUBJQEnASYB")],
"material": SubResource("StandardMaterial3D_8q84p"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 327,
"vertex_data": PackedByteArray("ogtmZugi6siiC2ZmFt2SvEUXAAA3LPbGRRcAAMfTJr50EWZmdBH/3+giZmaiC3H5dBH//3QR/9/oIv//ogtx+XQRZmZ0Ef/fdBH//3QR/9+iC2Zm6CKNxqIL///oIo3GogtmZugijcaiC///6CKNxqILZmYW3XG5ogv//xbdcbkW3WZmogtx+YruZmZ0Ef/fFt3//6ILcfmK7v//dBH/3+giZmaiC3H5Ft1mZqILcfnoIv//ogtx+Rbd//+iC3H5iu7//3QR/9+K7mZmdBH/31z0///oIo3GXPRmZugijcboImZmXPSNhnQRZmaK7v+f6CL//1z0jYZ0Ef//iu7/n6ILZmYW3XG5ogv//xbdcbl0EWZmiu7/n3QR//+K7v+fNywAAEUXdPvH0wAARRd0++giZmaiC575Ft1mZqILnvlc9GZm6CLqyLnoAAA3LPbGXPRmZhbdkry56AAAx9MmvoIcAACCHOvkNywAAEUX4fl0EWZmdBHr5OgiZmaiC/b3uegAAMfTrrx84wAAfOOOq1z0ZmYW3fO6iu5mZorujqtFFwAAx9OuvKILZmYW3fO6ghwAAHzjjqt0EWZmiu6Oq8fTAAC56BeVNywAALnoF5UW3WZmXPRAlugiZmZc9ECWXPT//xbdcblc9GZmFt1xuYru//+K7v+fiu5mZoru/59c9P//6CKNxlz0ZmboIo3GXPT//xbdcblc9GZmFt1xuYruZmZ0EYnefOMAAIIcid5c9GZm6CKAyrnoAAA3LInIdBFmZnQRid6iC2Zm6CKAyoIcAACCHIneRRcAADcsicjH0wAARRfh+XzjAACCHOvkFt1mZqIL9veK7mZmdBHr5HzjAAB843Kmx9MAALnoqZWK7mZmiu5yphbdZmZc9KuWuegAAMfT/7+56AAANyz/v3zjAAB84/+/fOMAAIIc/7/H0wAAuej/v8fTAABFF/+/NywAALno/783LAAARRf/v4IcAACCHP+/ghwAAHzj/79FFwAANyz/v0UXAADH0/+/NywAALnoqZWCHAAAfONypugiZmZc9KuWdBFmZorucqaK7mZmiu7/nxbdZmZc9I2Giu7//4ru/58W3f//XPSNhhbdZmZc9I2G6CJmZlz0jYYW3f//XPSNhugi//9c9I2Gogv//xbd//+iC///6CL//3QR//+K7v//dBH//3QR///oIv//XPT//+gi//9P2f//6CL//68m///aI///JNz//68m//8W3f//T9n//xbd///oIv//ogv//xbd//9c9P//2iP//9oj//+vJv//6CL//0/Z///oIv//JNz//yTc//8W3f//ogv//yTc///aI///Ft3//68m//8W3f//T9n//4ru//90Ef//iu7//4ru//9c9P//6CL//1z0//8W3f//Ft3//0/Z//8k3P//JNz//xbd//+vJv//JNz//9oj//9P2f//Ft3//0/Z///oIv//0MX//y46//+vJv//6CL//9DF///Qxf//Ljr//y46//+vJv//Ft3//y46///Qxf//2iP//9oj///aI///JNz//+gi//+vJv//6CL//0/Z///Qxf//0MX//y46///Qxf//0MX//y46//8uOv//Ljr//3PRZmZz0f////9mZnPR//9z0czMc9H/////zMxz0f/////MzHPR/////8zM+d7//3PRzMxz0f//vffMzL33///53szM/////3PRzMz///////9mZnPR/79z0WZmc9H/v///Zmb53v+/vfdmZr33/7/53mZm////v3PRZmb///+/vfdmZr33/5/53mZm//+Nhr33zMy99/+f+d7MzP//jYb//8zM+d5xuf//Zmb53nG5vffMzL33/5+992Zmvff/n///zMxz0f+///9mZnPR/7///8zM+d5xuf//Zmb53nG5+d5mZv//jYZz0WZm//8AgPnezMz//42Gc9HMzP//AIBz0WZmc9H/v3PRzMxz0f+/c9FmZv///79z0czM////v///ZmaLLgCAc9FmZosuAID//8zMiy4AgHPRzMyLLgCA///MzIsu//9z0czMiy7/////zMwFIf//vffMzEEI///53szMAAD//3PRzMwAAP////9mZosu/7///2ZmBSH/v3PRZmaLLv+/vfdmZkEI/7/53mZmAAD/v3PRZmYAAP+/c9FmZgAA///53mZmAABx+XPRzMwAAP//+d7MzAAAcflz0WZmAAD/v3PRzMwAAP+/c9FmZosu/79z0czMiy7/v///zMwFIY3G//9mZgUhjcb//8zMiy7/v///ZmaLLv+/vffMzEEI/9+992ZmQQj/3///zMwFIY3G//9mZgUhjcb53mZmAABx+b33ZmZBCP/f+d7MzAAAcfm998zMQQj/3wAAZmYFIY3GAADMzAUhjcYAAGZmiy7/vwAAzMyLLv+/BSFmZgAAcfmLLmZmAAD//wUhzMwAAHH5iy7MzAAA//+LLszMAAD//4suzMyLLv//BSHMzAAA//8AAMzMiy7//0EIzMxBCP//AADMzAUh//+LLszMAAD/v4suZmYAAP+/iy7MzIsu/7+LLmZmiy7/v4suZmaLLgCAAABmZosuAICLLszMiy4AgAAAzMyLLgCAQQhmZkEI/98FIWZmAABx+UEIzMxBCP/fBSHMzAAAcflBCGZmQQj/30EIzMxBCP/fAABmZgUhjcYAAMzMBSGNxosuZmYAAP+/BSFmZgAA/7+LLmZmiy7/vwAAZmaLLv+/QQhmZkEI/78AAGZmBSH/v4suZmb///+/iy5mZnPR/78FIWZm////vwAAZmZz0f+/QQhmZr33/78AAGZm+d7/v4suzMxz0f//iy7MzP////8AAMzMc9H//wUhzMz/////QQjMzL33//8AAMzM+d7//wAAZmb53nG5AADMzPnecblBCGZmvff/n0EIzMy99/+fAABmZnPR/78AAMzMc9H/vwAAZmb53nG5AADMzPnecbmLLszMc9H/v4suZmZz0f+/iy7MzP///7+LLmZm////v4suZmb//wCABSFmZv//jYaLLszM//8AgAUhzMz//42GBSFmZv//jYZBCGZmvff/nwUhzMz//42GQQjMzL33/58AAGZmc9H//4suZmZz0f//AADMzHPR//+LLszMc9H//0UXAAA3LLPGogv//+giScmiC///6CID2qIL//8W3XWuiu7//3QRqumK7v//dBGl1TcsAABFF7zwuegAADcsD9S56AAANyxryIIcAACCHAXtfOMAAHzjt8iCHAAAfOO3yDcsAAC56F+7NywAALnoHsA3LAAAuegNhIru//+K7qLBiu7//4rugLCK7v//iu5UlnzjAACCHF7jfOMAAIIc8uS998zMvffwof//Zmb53tqyc9FmZv//Uopz0czMAABz9///zMwFIfjMvfdmZkEIsd4AAGZmiy6ZxgUhZmYAANXvQQjMzEEIz+FBCGZmvffao0EIZma99xyXqVUb6e5QX+oGVszptFKn6v9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////38AAP9/////fwAA/38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f////3////9/////f///cJuA/n6BcRuvnNf9JoKvHBxpVirNafkpYGoRL6hqSi1EogX/PGHc+USiBf8WYVr6qGNfLSpfpkNDY/ouKl+mQ6BSqOMFUULjWTwp31k8Kd9RFutjFBxRlhQcalyVIxSc/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAB2acordmnKKw5wDSmicOwoNVR16fJWDvA1VHXpE1ei8Nx5wh75gEUiWnroHvmARSIMQCA+vC3CZgxAID7TMNtgAAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/PBm7rd5BDMAkH9Kw3kEMwP9/AAD/fwAA/38AAP9/AAD/fwAA/3////9/AAD/f////3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f////3////9/////f////3//v/9//7//f/+//3//v/9//7//f/+/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9//38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/////fwAA/3////9/////f////3////9/////f////3////9/////f////3//v/9//7//f/+//3//v/9//7//f/+/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9//3////9/AAD/f////38AAP9/////f////3////9/////fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9//7//f/+//3//v/9//7//f/+//3//v/9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9/////f////3////9///8AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+//3//v/9//7//f////3////9/////f////3////9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9/////f////3////9///+mWPzqImeb9IiCM+Skk/m/5X4yDqN9pwtSnkjvS1nHTk5vSh6SLmXwRERvYpAdQ8RWKBCqPwX2h11pwLy+PxNb936JAap9gAO8avsti2JyR4R/rQDcficCZk6ZMa9/TwAqiKADfYAkAD59qP4vgyX/Z3/T//9/////f///")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_subup")

[sub_resource type="Animation" id="Animation_py1y8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platform-falling2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ywbb"]
resource_name = "rspawn"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platform-falling2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.25, 1.25, 1.25), Vector3(1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restore_platform"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmy7m"]
_data = {
"RESET": SubResource("Animation_py1y8"),
"respawn": SubResource("Animation_4ywbb")
}

[node name="platform-falling" instance=ExtResource("1_1qe41")]
script = ExtResource("2_wd5kn")

[node name="Area3D" type="Area3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("BoxShape3D_t551e")

[node name="platform-falling2#StaticBody3D" type="StaticBody3D" parent="." index="1"]

[node name="platform-falling_collisionShape3D" type="CollisionShape3D" parent="platform-falling2#StaticBody3D" index="0"]
unique_name_in_owner = true
shape = SubResource("ConcavePolygonShape3D_4mmvt")

[node name="platform-falling2" parent="." index="2"]
mesh = SubResource("ArrayMesh_6gl6g")

[node name="FallingPlatformAnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_mmy7m")
}

[node name="spike-block-wide" parent="." index="4" instance=ExtResource("4_tjnoj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00102687, 1.01937, 0.774492)

[node name="spike-block-wide2" parent="." index="5" instance=ExtResource("4_tjnoj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00102687, 1.01937, -0.819623)

[connection signal="body_entered" from="Area3D" to="." method="_on_body_entered"]
